<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/t3"
    android:id="@+id/lvparent"
    tools:context=".HomeActivity">


        <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">


        <Button
            android:id="@+id/btnExit"
            android:layout_width="80dp"
            android:layout_height="34dp"
            android:layout_gravity="left"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/mybtn"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="logout"
            android:text="Log out"
            android:textColor="#fff" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dp">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ImgProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/user"
            tools:layout_editor_absoluteY="168dp"
            tools:layout_editor_absoluteX="168dp"
            app:civ_border_color="#028FFF"
            app:civ_border_width="2dp"/>
        <TextView
            android:id="@+id/btnPimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center_horizontal"
            android:text="Set Profile Image?"
            android:textSize="16sp"
            android:textColor="#2196F3"
            android:onClick="SetProfileImg"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnStoreInfo"
            android:layout_width="110dp"
            android:layout_height="65dp"
            android:layout_gravity="left"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="2dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/mybtn"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="StoreInfo"
            android:paddingRight="2dp"
            android:text="@string/user_physiological_information"
            android:textColor="#fff" />


        <Button
        android:id="@+id/btnGoals"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:background="@drawable/mybtn"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/set_target_goals"
        android:textColor="#fff"
        android:onClick="Goals"
            android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btnDailyChange"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/mybtn"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/daily_changes"
        android:textColor="#fff"
        android:onClick="DailyChange"
        android:foreground="?attr/selectableItemBackground"/>
</LinearLayout>

<LinearLayout
    android:id="@+id/view2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:orientation="horizontal"
    android:padding="5dp">
    <Button
        android:id="@+id/btnMeal"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/mybtn"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/meal_recordings"
        android:textColor="#fff"
        android:onClick="MealRecord"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btnStatistics"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:background="@drawable/mybtn"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/user_statistics"
        android:textColor="#fff"
        android:onClick="Statistics"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/mybtn"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/profile_settings"
        android:textColor="#fff"
        android:onClick="Profile"
        android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>



</LinearLayout>


</RelativeLayout>