<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/t3"
    android:id="@+id/lvparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="10dp">


            <Button
                android:id="@+id/btnExit"
                android:layout_width="80dp"
                android:layout_height="34dp"
                android:background="@drawable/mybtn"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="logout"
                android:text="Log out"
                android:textColor="#fff" />


        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ImgProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/user"
            tools:layout_editor_absoluteY="168dp"
            tools:layout_editor_absoluteX="168dp"
            app:civ_border_color="#028FFF"
            app:civ_border_width="2dp"/>
    </LinearLayout>


        <GridLayout
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bmi">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/height"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/weight"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/age"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/gender"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/body_mass_index"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/status"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/changes"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="NOTSET"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="NOTSET"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="NOTSET"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="NOTSET"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="NOTSET"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="2"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="NOTSET"
                android:textColor="#000"
                android:textSize="12sp" />
        </GridLayout>


        <LinearLayout
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/biostats"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/height" />

        <EditText
            android:id="@+id/edtHeight"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@drawable/myedittextbg"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/enter_height"
            android:padding="5dp"
            android:textColor="#2d3436" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/biostats"
        android:orientation="horizontal"
        android:padding="5dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/weight" />

        <EditText
            android:id="@+id/edtWeight"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:background="@drawable/myedittextbg"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/enter_weight"
            android:padding="5dp"
            android:textColor="#2d3436" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/biostats"
        android:orientation="horizontal"
        android:padding="5dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/age" />

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="150dp"
            android:layout_height="65dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:background="@drawable/myedittextbg"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/enter_age"
            android:padding="5dp"
            android:textColor="#2d3436" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/biostats"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="Male"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>
        <Switch
            android:id="@+id/switchgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="56dp"
            android:layout_gravity="center"
            android:onClick="ChangeGender"
            android:checked="false"
            android:textOff="Male"
            android:textOn="Female"/>
        <TextView
            android:id="@+id/txtFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="Female"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnout"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnGender"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:background="@drawable/mybtn"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="StoreAll"
            android:text="SET"
            android:textColor="#fff" />
    </LinearLayout>

    </LinearLayout>


</ScrollView>
</LinearLayout>