<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/t3"
    android:orientation="vertical"
    android:id="@+id/lvparent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="10dp">


            <Button
                android:id="@+id/btnExit"
                android:layout_width="80dp"
                android:layout_height="34dp"
                android:background="@drawable/mybtn"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="logout"
                android:text="Log out"
                android:textColor="#fff" />


        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ImgProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/user"
                tools:layout_editor_absoluteY="168dp"
                tools:layout_editor_absoluteX="168dp"
                app:civ_border_color="#028FFF"
                app:civ_border_width="2dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/biostats"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/weight" />

            <EditText
                android:id="@+id/edtWeightGoal"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:background="@drawable/myedittextbg"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/WeightGaol"
                android:padding="5dp"
                android:textColor="#2d3436" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/biostats"
            android:orientation="horizontal"
            android:padding="5dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/calories" />

            <EditText
                android:id="@+id/edtCalorieGoal"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:background="@drawable/myedittextbg"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/caloriegoal"
                android:padding="5dp"
                android:textColor="#2d3436" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/biostats"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="71dp"
                android:layout_gravity="center"
                android:src="@drawable/treadmill" />

            <EditText
                android:id="@+id/edtStepGoal"
                android:layout_width="150dp"
                android:layout_height="65dp"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:background="@drawable/myedittextbg"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/DailySteps"
                android:padding="5dp"
                android:textColor="#2d3436" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btnout"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btnGender"
                android:layout_width="240dp"
                android:layout_height="55dp"
                android:background="@drawable/mybtn"
                android:fontFamily="sans-serif-condensed-medium"
                android:onClick="StoreAll"
                android:text="SET"
                android:textColor="#fff" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>

</LinearLayout>